--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "lib": "lib"
   },
   "dependencies": {
+    "basic-auth-connect": "^1.0.0",
     "dotenv": "^6.0.0",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
     "form-data": "^2.3.2",
     "mongodb": "^3.1.6",
     "node-fetch": "^2.2.0",
+    "node-schedule": "^1.3.0",
     "web3": "^1.0.0-beta.36",
     "web3-utils": "^1.0.0-beta.36"
   },
