--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "basic-auth-connect": "^1.0.0",
-    "better-queue": "^3.8.10",
     "dotenv": "^6.0.0",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
     "form-data": "^2.3.2",
+    "kue": "^0.11.6",
     "mongodb": "^3.1.6",
     "node-fetch": "^2.2.0",
     "node-schedule": "^1.3.0",
